--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.22.4",
+    "firebase": "^9.9.2",
     "mobx": "^6.6.1",
     "next": "12.2.5",
     "react": "18.2.0",
