--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "antd": "^4.22.4",
     "firebase": "^9.9.2",
     "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
+    "mobx-react-lite": "^3.4.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
