--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.4.0",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-blur": "^1.1.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
